RESOLVED FIXED268474
[WebGPU] Queue::onSubmittedWorkDone may crash if device is destructed
https://bugs.webkit.org/show_bug.cgi?id=268474
Summary [WebGPU] Queue::onSubmittedWorkDone may crash if device is destructed
Mike Wyrzykowski
Reported 2024-01-31 09:08:19 PST
[WebGPU] Queue::onSubmittedWorkDone may crash if device is destructed
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-31 09:08:35 PST
Mike Wyrzykowski
Comment 2 2024-01-31 09:08:55 PST
Mike Wyrzykowski
Comment 3 2024-01-31 09:13:56 PST
EWS
Comment 4 2024-01-31 17:04:42 PST
Committed 273870@main (d08e8b03938a): <https://commits.webkit.org/273870@main> Reviewed commits have been landed. Closing PR #23593 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.