[WebGPU] Queue::onSubmittedWorkDone may crash if device is destructed https://bugs.webkit.org/show_bug.cgi?id=268474 <radar://122010484>

Reviewed by Dan Glastonbury.

Queue was holding a reference to a device, but its posssible
for the Device to get destroyed prior to the Queue so hold
a WeakPtr instead.

* Source/WebGPU/WebGPU/Device.h:
* Source/WebGPU/WebGPU/Queue.h:
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::submit):
(WebGPU::Queue::writeBuffer):
(WebGPU::Queue::device const):
(WebGPU::Queue::clearTexture):
(WebGPU::Queue::writeTexture):
(WebGPU::Queue::scheduleWork):

Canonical link: https://commits.webkit.org/273870@main